crates/analyzer/tests/snapshots/errors__duplicate_contract_in_module.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: a type named "Foo" has already been defined
  ┌─ compile_errors/duplicate_contract_in_module.fe:1:10
  │
1 │ contract Foo {
  │          ^^^ `Foo` first defined here
  ·
5 │ contract Foo {
  │          --- `Foo` redefined here


